Enabeld attach to itself and honoring of java_home